# iac-lab

./: .gitignore  flake.nix
lab1/ansible-tf-website/: README.md  dashboard.tf  frontend.tf  variables.tf
lab1/ansible-tf-website/backend/: ansible.cfg  config-instance.yaml  destroy-instance.yaml  provision.yaml  requirements.yaml
lab1/ansible-tf-website/backend/inventory/: hosts.yml
lab1/ansible-tf-website/backend/inventory/group_vars/: backend_app_compute.yml
lab1/ansible-tf-website/backend/src-code/: Dockerfile  app.py  pyproject.toml
lab1/ansible-tf-website/backend/templates/: env.tfvars.j2
lab1/ansible-tf-website/backend/terraform/: backend.tf  output.tf  variables.tf  version.tf
lab1/ansible-tf-website/frontend-src/: simple.html
lab2/chatbot-exercise/: .terraform.lock.hcl  example_expected_config.tf
lab2/copilot-exercise/: .terraform.lock.hcl  corrected_main.tf  main.tf
lab2/tf-state-management/: import_generate_config.tf  main.tf  module.tf  version.tf
lab2/tf-state-management/my_module/: bucket.tf  variables.tf
