[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tuterdust <nuttapong.rj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
opentelemetry-exporter-prometheus = "^0.50b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
